<resources>
    <string name="app_name">My Finance</string>
    <string name="transaction">Transaction</string>
    <string name="analytics">Analytics</string>
    <string name="category">Category</string>
    <string name="income">INCOME</string>
    <string name="expense">EXPENSE</string>
    <string name="liability">Liability</string>
    <string name="asset">Asset</string>
    <string name="savings">Savings</string>
    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>
    <string name="incomebtn">Income</string>
    <string name="expensebtn">Expense</string>
    <string name="spinner_title">Select Category</string>
    <string name="dateHint">01-01-1971</string>
    <string name="manage_category">Manage Category</string>
    <string name="search">Search</string>
    <string name="sort">Sort by</string>
    <string name="print">Print</string>
    <string name="mc_des">Categories display on homepage</string>
    <string name="add">Add</string>
    <string name="hint">Add Category</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="category_hint">Add Category</string>
    <string name="makeTran">Make Transaction</string>
    <string name="transaction_history">Recent Transaction</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="filter">Filter</string>
    <string name="total">TOTAL</string>
    <string name="all_tab">All Categories</string>
    <string name="budget_tab">Budget Categories</string>
    <string name="incT">Income Categories</string>
    <string name="expT">Expense Categories</string>
    <string name="set_budget">Set Budget</string>
    <string name="hide">Hide</string>
    <string name="reset_budget">Reset Budget</string>
    <string name="remove_budget">Remove Budget</string>
    <string-array name="overview_array">
        <item>Expense Overview</item>
        <item>Income Overview</item>
    </string-array>
    <string name="like">Like Us</string>
    <string name="settings">Settings</string>
    <string name="feedback">Give FeedBack</string>
    <string name="accounting">Accounting</string>
    <string name="share">Share</string>
    <string name="importdata">Import File/Data</string>
    <string name="exportdata">Export File/Data</string>
    <string name="deletedata">Delete Data</string>
</resources>