<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTransactionActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/dateTV"
            android:layout_width="97dp"
            android:layout_height="45dp"
            android:layout_below="@id/groupradio"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:text="Date"
            android:textSize="20sp" />

        <android.widget.Button
            android:id="@+id/dateET"
            android:layout_width="226dp"
            android:layout_height="51dp"
            android:layout_below="@id/groupradio"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/dateTV"
            android:background="@drawable/edit_shape"
            android:ems="10"
            android:gravity="left|center_vertical"
            android:hint="@string/dateHint"
            android:paddingLeft="25dp"
            android:text="Today"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/categoryTV"
            android:layout_width="wrap_content"
            android:layout_height="49dp"
            android:layout_below="@id/dateTV"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="Category"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="226dp"
            android:layout_height="51dp"
            android:layout_below="@id/dateET"
            android:layout_marginLeft="19dp"
            android:layout_marginTop="17dp"
            android:layout_toRightOf="@+id/categoryTV"
            android:background="@drawable/spinner_back_new"
            android:gravity="bottom|right"
            android:paddingLeft="25dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp" />

        <TextView
            android:id="@+id/amountTV"
            android:layout_width="97dp"
            android:layout_height="52dp"
            android:layout_below="@id/categoryTV"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:text="Amount"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/amountET"
            android:layout_width="226dp"
            android:layout_height="51dp"
            android:layout_below="@id/spinner"
            android:layout_marginLeft="19dp"
            android:layout_marginTop="18dp"
            android:layout_toRightOf="@+id/amountTV"
            android:background="@drawable/edit_shape"
            android:hint="amount"
            android:inputType="number"
            android:paddingLeft="25dp" />


        <RadioGroup
            android:id="@+id/groupradio"
            android:layout_width="339dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radia_id1"
                android:layout_width="198dp"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:text="@string/incomebtn"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <RadioButton
                android:id="@+id/radia_id2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:text="@string/expensebtn"
                android:textSize="20sp"
                android:textStyle="bold|italic" />
        </RadioGroup>

        <Button
            android:id="@+id/incomebtn"
            android:layout_width="154dp"
            android:layout_height="60dp"
            android:layout_alignBottom="@id/amountET"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="false"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="137dp"
            android:layout_marginRight="123dp"
            android:layout_marginBottom="-76dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/makeTran" />
    </RelativeLayout>
</LinearLayout>